--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -118,11 +118,11 @@ for (file in R.files) {
 parameters <- list(
   working.dir = getwd(),
   output.dir = "~/cisreg-GWAS_results",
-  # query =  "EFO_0001068", # malaria
+  query =  "EFO_0001068", # malaria
   #query = "EFO_0001360", # type ii diabetes mellitus
   #query = "HP_0100806", # sepsis
   #query = "EFO_0000249", # Alzheimer's disease
-  query =  "EFO_0008407", # tuberculosis
+  #query =  "EFO_0008407", # tuberculosis
   ld.pop.prefix = "1000GENOMES:phase_3:",
   population = "AFR",
   r2 = 0.8,
@@ -1090,7 +1090,7 @@ par(mfrow = c(1,1))
 We compute the coordinates of each LD group.s
 
 
-```{r haplotype_block, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Number of SNPs in LD per SOI.** "), out.width = "80%", fig.width=8, fig.height=4.5}
+```{r haplotype_block, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Number of SNPs in LD per SOI.** "), out.width = "100%", fig.width=9, fig.height=4.5}
 
 message("Identifying haplotype blocks")
 
@@ -1189,12 +1189,12 @@ for (i in 1:length(ldGroups)) {
   current.ldGroup.info <- data.frame(
     DA.SNP = snp,
     nb.SNPs = length(ldGroup),
-    chr_name = SOIs[SOIs$refsnp_id == snp, "chr_name"],
-    chrom_start = min(SOIs[SOIs$refsnp_id %in% ldGroup, "chrom_start"]),
-    chrom_end = max(SOIs[SOIs$refsnp_id %in% ldGroup, "chrom_end"])
+    chr_name = snpInfo[snpInfo$refsnp_id == snp, "chr_name"],
+    chrom_start = min(snpInfo[snpInfo$refsnp_id %in% ldGroup, "chrom_start"]),
+    chrom_end = max(snpInfo[snpInfo$refsnp_id %in% ldGroup, "chrom_end"])
   )
   ldGroup.info <- rbind(ldGroup.info, current.ldGroup.info)
-  # names(SOIs)
+  # names(snpInfo)
 }
 ldGroup.info$size <- ldGroup.info$chrom_end - ldGroup.info$chrom_start + 1
 row.names(ldGroup.info) <- ldGroup.info$DA.SNP
@@ -1212,6 +1212,16 @@ haplotype.blocks.gr <- with(ldGroup.info,
                             strand   = Rle("*")))
 
 
+par(mfrow = c(1,2))
+
+## Draw a plot with LD block sizes: kilobases versus nb of SNPs
+plot(ldGroup.info$nb.SNPs, ldGroup.info$size/1000, 
+     main = "LD block sizes",
+     las = 1, col = "blue",
+     xlab = "SNPs per LD block", ylab = "LD block size (kb)",
+     panel.first = grid())
+
+
 ## Draw a barplot with the number of SNPs per LD block (one block per DA SNP)
 ldGroup.snpNb <- ldGroup.info$nb.SNPs
 names(ldGroup.snpNb) <- ldGroup.info$DA.SNP
@@ -1219,23 +1229,23 @@ snps.per.ldblock <- sort(ldGroup.snpNb, decreasing = TRUE)
 max.snps <- min(length(snps.per.ldblock), 20)
 y <- barplot(
   snps.per.ldblock[1:max.snps],
-  main = "LD block sizes",
+  main = "Top-ranking LD blocks",
   horiz = TRUE, 
-  xlim = c(0, max(ld.block)*1.1),
+  xlim = c(0, max(snps.per.ldblock)*1.1),
   las = 1, 
   cex.names = 0.8,
   col = "#0D5F05",
   #main = "Number of SNPs in LD per SOI",
-  xlab = "Number of SNPs in LD block",
+  xlab = "SNPs per LD block",
   #ylab = "Disease-associated SNPs",
   cex.axis = 1,
   cex.lab = 1)
-text(x = ld.block[1:max.snps], y = y, labels = ld.block[1:max.snps], pos = 4)
+text(x = snps.per.ldblock[1:max.snps], y = y, labels = snps.per.ldblock[1:max.snps], pos = 4)
 
 par(par.ori)
 ```
 
-We identify `r nrow(haplotype.block)` haplotype blocks of a given SNP based on the pairs of LD SNPs previously retrieved from Ensembl as the limits of the region encompassing the SNPs in LD with this SNP.
+We identify `r nrow(ldGroup.info)`  groups of SNPs in linkage disequilibrium (LD group), i.e. one for each one of the disease-associated SNP (DA-SNP) based on the pairs of LD SNPs retrieved from Ensembl. We then compute the coordinates of the LD blocks as the limits of the region encompassing all the SNPs in LD with a given DA SNP.
 
 
 ```{r heatmap_DA-LD-SNPs}
@@ -1707,7 +1717,7 @@ grid(col = "#DDDDDD", lty = "solid")
 par(mfrow=c(1,1))
 ```
 
-## Chip-Seq peaks annotation using ReMap data
+## Annotation of SNPs with Chip-Seq peaks from ReMap
 
 The ReMap catalog [@Griffon:2015en, @Cheneby:2018ix] is an integrative analysis of transcriptional regulators ChIP-seq experiments from both Public and Encode datasets [@ENCODEProjectConsortium:2012gc]. We used the `ReMapEnrich` package to identify the significant enriched region from ReMap catalog conrresponding of the TFBS altered by the potential regulatory SNPs.
 
