--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -118,11 +118,11 @@ for (file in R.files) {
 parameters <- list(
   working.dir = getwd(),
   output.dir = "~/cisreg-GWAS_results",
-  query =  "EFO_0001068", # malaria
+  #query =  "EFO_0001068", # malaria
   #query = "EFO_0001360", # type ii diabetes mellitus
   #query = "HP_0100806", # sepsis
   #query = "EFO_0000249", # Alzheimer's disease
-  #query =  "EFO_0008407", # tuberculosis
+  query =  "EFO_0008407", # tuberculosis
   ld.pop.prefix = "1000GENOMES:phase_3:",
   population = "AFR",
   r2 = 0.8,
@@ -698,6 +698,7 @@ x <- barplot(height = df,
         xlim = c(0, max(df)*1.1),
         cex.axis = 1,
         main = "B",
+         xlab = "SNPs",
         cex.lab = 1,
         horiz = TRUE, 
         col = "#DBDDFF",
@@ -834,6 +835,25 @@ kable(head(LdSNPs), caption = paste0(
 
 
 
+```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "80%", fig.width=8, fig.height=4.5}
+
+# Draw a barplot of SNPs in LD
+nb.ld.snps <- table(factor(LdSNPs$variation1))
+
+barplot(as.vector(nb.ld.snps),
+        horiz = F,
+        cex.axis = 1,
+        cex.lab = 1,
+        las = 1, 
+        main = "SNPs in linkage disequilibrium",
+        xlab = "DA-SNPs",
+        ylab = "LD SNPs",
+        cex.names = 0.8,
+        col = "#006699")
+
+```
+
+
 In this section, we gathering the informations about the DA and LD SNPs from Ensembl using the R `biomaRt` package.
 
 ```{r biomart_SNP_annotation}
@@ -904,12 +924,13 @@ DA.df$Freq <- as.numeric(as.character(DA.df$Freq))
 
 #Barplot of genomic context of DA-SNPs
 ggplot(data = DA.df, aes(x = Context, y = Freq)) +
-  geom_bar(stat = "identity", fill = "#207DC2", color = "black") +
+  geom_bar(stat = "identity", fill = "#999966", color = "black") +
   geom_text(aes(label = Freq), vjust = -0.1, hjust = -0.5, size = 4) +
   xlab("Genomic context") +
   ylab("Frequency") +
   theme_test() +
   coord_flip()
+
 
 ```
 
@@ -1006,21 +1027,50 @@ write.table(x = SOIs,
 
 
 ```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=6, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic feature of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
-par(mfrow = c(1,2)) 
-#par.ori <- par(no.readonly = TRUE)
+par(mfrow = c(2,2)) 
+par.ori <- par(no.readonly = TRUE)
 par(mar = c(5.1, 8, 3.1, 2.1))
-## Draw a barplot with the number of disease-associated SNPs per chromosome
-barplot(height = sort(table(SOIs$chr_name), decreasing = FALSE), 
+
+## Draw a barplot with the number of LD SNPs per chromosome
+barplot(height = sort(table(snpInfo$chr_name), decreasing = FALSE), 
         #main = "Disease-associated SNPs per chromosome",
         main = "A",
         xlab = "SNPs",
         ylab = "Chromosomes",
-        cex.axis = 0.8,
+        cex.axis = 1,
         horiz = TRUE,
-        col = "#6699ff",
-        cex.names = 0.7, 
+        col = "#006699",
+        cex.names = 1, 
+        las = 1)
+
+ld.df <- sort(table(snpInfo$consequence_type_tv),  decreasing = FALSE)
+max.context <- length(ld.df)
+x <- barplot(height = ld.df,
+        #main = "Disease-associated SNPs per chromosome",
+        xlim = c(0, max(ld.df)*1.1),
+        cex.axis = 1,
+        main = "B",
+        xlab = "SNPs",
+        cex.lab = 1,
+        horiz = T, 
+        col = "#006699",
+        cex.names = 1, 
+        las = 1)
+text(x = ld.df[1:max.context], y = x, labels = ld.df[1:max.context], cex = 0.7, pos = 4)
+
+## Draw a barplot with the number of disease-associated SNPs per chromosome
+barplot(height = sort(table(SOIs$chr_name), decreasing = FALSE), 
+        #main = "Disease-associated SNPs per chromosome",
+        main = "C",
+        xlab = "SNPs",
+        ylab = "Chromosomes",
+        cex.axis = 1,
+        horiz = TRUE,
+        col = "#ffcc99",
+        cex.names = 1, 
         las = 1)
 #box()
+
 
 soi.df <- sort(table(SOIs$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(soi.df)
@@ -1028,60 +1078,17 @@ x <- barplot(height = soi.df,
         #main = "Disease-associated SNPs per chromosome",
         xlim = c(0, max(soi.df)*1.1),
         cex.axis = 1,
-        main = "B",
+        main = "D",
         xlab = "SNPs",
         cex.lab = 1,
         horiz = T, 
         col = "#ffcc99",
-        cex.names = 0.7, 
+        cex.names = 1, 
         las = 1)
 text(x = soi.df[1:max.context], y = x, labels = soi.df[1:max.context], cex = 0.7, pos = 4)
 #box()
 ```
 
-
-```{r genomic_context_of_SOIs_ggplot, out.width = "80%", fig.width=8, fig.height=4.5, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". (A) Genomic context of disease-associated (DA) SNPs and SNPs in linkage disequilibrium (LD). (B) Genomic context of the SOIs. The SOIs are selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).** ")}
-
-#Barplot of genomic context of DA and LD SNPs
-snpInfo$consequence_type_tv[snpInfo$consequence_type_tv == ""] <- "unknown"
-
-# Create a data frameg
-allSNPs.Context <- snpInfo$consequence_type_tv
-allSNPs.DA.df <- as.data.frame.table(sort(table(allSNPs.Context), decreasing = T))
-## Make the frequencies numbers (rather than factors)
-## JvH (2019-07-25): this is not necessary with as.data.frame.table() above
-# DA.df$Freq <- unlist(DA.df$Freq)
-
-# Barplot of genomic context of DA-SNPs
-A <- ggplot(data = allSNPs.DA.df, aes(x = allSNPs.Context, y = Freq)) +
-  geom_bar(stat = "identity", fill = "#207DC2", color = "black") +
-  geom_text(aes(label = Freq), vjust = -0.1, hjust = -0.5, size = 3.5) +
-  xlab("Genomic context") +
-  ylab("Frequency") +
-  theme_classic() +
-  coord_flip()
-
-
-#Barplot of genomic context of the SOIs
-
-# Create a data frame
-SOIs.Context <- SOIs$consequence_type_tv
-SOIs.DA.df <- data.frame(sort(table(SOIs.Context), decreasing = T))
-
-B <- ggplot(data = SOIs.DA.df, aes(x = SOIs.Context, y = Freq)) +
-  geom_bar(stat = "identity", fill = "#207DC2", color = "black") +
-  geom_text(aes(label = Freq), vjust = -0.1, hjust = -0.5, size = 3.5) +
-  xlab("Genomic context") +
-  ylab("Frequency") +
-  theme_classic() +
-  coord_flip()
-
-plot_grid(A, B,  labels = c("A", "B"), ncol = 1, nrow = 2)
-
-#par(par.ori)
-
-par(mfrow = c(1,1)) 
-```
 
 
 
@@ -1999,7 +2006,7 @@ bioMartConnection <- useMart(biomart = "ENSEMBL_MART_ENSEMBL", dataset = "hsapie
 SOIs.geneIDs.unique <- as.vector(sort(unique(SOIs.annotations$ensembl_gene_stable_id)))
 SOIs.geneIDs.unique <- grep(pattern = "^ENSG", x = SOIs.geneIDs.unique, value = TRUE)
 # length(geneIDs.unique)
-nb.genes <- length(geneIDs.unique)
+nb.genes <- length(SOIs.geneIDs.unique)
 message("Gettting information about ", nb.genes, " genes in Ensembl.")
 
 ## Get information about all genes
